refactor: change code organization
