# _example/api/order/endpoints.go
@@ -1,4 +1,4 @@
-// Code generated by jk generate endpoints -t OrderService; DO NOT EDIT.
+// Code generated by jk generate endpoints -t Service; DO NOT EDIT.
 
 package order
 
@@ -57,7 +57,7 @@ func (o EndpointSet) Update(ctx context.Context, req *UpdateOrderRequest) (*Upda
 	return resp.(*UpdateOrderResponse), nil
 }
 
-func NewEndpointSet(svc OrderService) EndpointSet {
+func NewEndpointSet(svc Service) EndpointSet {
 	return EndpointSet{
 		CancelOrderEndpoint: makeEndpointFromFunc(svc.CancelOrder),
 		CreateOrderEndpoint: makeEndpointFromFunc(svc.CreateOrder),
