# _example/api/order/transport_gin_server.go
@@ -1,4 +1,4 @@
-// Code generated by jk generate transport -t OrderService -P http -s -l go -f gin --swagger --embed-swagger; DO NOT EDIT.
+// Code generated by jk generate transport -t Service -P http -s -l go -f gin --swagger --embed-swagger; DO NOT EDIT.
 
 package order
 
@@ -68,17 +68,17 @@ func (s *GinServerSet) Register(router gin.IRouter) {
 }
 
 //go:embed swagger.json
-var swagger embed.FS
+var ginEmbedSwagger embed.FS
 
 // RegisterEmbedSwaggerUI register embed swagger-ui urls
-func RegisterEmbedSwaggerUI(r gin.IRouter) {
-	fs := http.FS(swagger)
+func (s *GinServerSet) RegisterEmbedSwaggerUI(r gin.IRouter) {
+	fs := http.FS(ginEmbedSwagger)
 	handler := http.FileServer(fs)
-	handler = http.StripPrefix("/swagger/order-service/spec/", handler)
+	handler = http.StripPrefix("/swagger/service/spec/", handler)
 	r.GET(
-		"/swagger/order-service/spec/*rest",
+		"/swagger/service/spec/*rest",
 		gin.WrapH(handler))
-	u := httpSwagger.URL("/swagger/order-service/spec/swagger.json")
+	u := httpSwagger.URL("/swagger/service/spec/swagger.json")
 	handler = httpSwagger.Handler(u)
-	r.GET("/swagger/order-service/swagger-ui/*rest", gin.WrapH(handler))
+	r.GET("/swagger/service/swagger-ui/*rest", gin.WrapH(handler))
 }
