# cmd/endpoints.go
@@ -25,7 +25,7 @@ import (
 	"emperror.dev/errors"
 	"github.com/dave/jennifer/jen"
 	"github.com/nnnewb/jk/internal/domain"
-	"github.com/nnnewb/jk/internal/gen"
+	"github.com/nnnewb/jk/internal/gen/endpoints"
 	"github.com/nnnewb/jk/internal/utils"
 	"github.com/spf13/cobra"
 )
@@ -62,7 +62,7 @@ func genEndpoint(service *domain.Service, pkg, filename string) error {
 	f := jen.NewFilePath(pkg)
 	f.HeaderComment(fmt.Sprintf("Code generated by jk %s; DO NOT EDIT.", strings.Join(os.Args[1:], " ")))
 	utils.InitializeFileCommon(f)
-	err := gen.GenerateEndpoints(f, service.Interface)
+	err := endpoints.GenerateEndpoints(f, service.Interface)
 	if err != nil {
 		return errors.Wrap(err, "generate endpoints for service failed")
 	}
